random component to points

--- a/test_pose_estimation.ipynb
+++ b/test_pose_estimation.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "N_cams = 3\n",
@@ -60,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Xs, Ys, Zs = np.array([tools.pos_from_P(P)[:-1, -1] for P in Ps]).T\n",
@@ -84,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
@@ -108,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "N_points = 50\n",
+    "N_points = 25\n",
     "r_t = r//4\n",
     "phi = np.linspace(np.pi/4, 3*np.pi/4, int(N_points**(1/2)))\n",
     "theta = np.linspace(-2*np.pi/4, np.pi/4, int(N_points**(1/2)))\n",
@@ -127,8 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "XX = XX + np.random.randn(*XX.shape)\n",
+    "YY = YY + np.random.randn(*YY.shape)\n",
+    "ZZ = ZZ + np.random.randn(*ZZ.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -186,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21efd628208>"
+       "<matplotlib.legend.Legend at 0x1d6572a5b70>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {
     "collapsed": true
    },
@@ -263,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -309,8 +328,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "P_reconstructed = [np.column_stack((np.eye(3), np.zeros(3)))]\n",
@@ -329,8 +350,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "P_reconstructed_PnP = [np.column_stack((np.eye(3), np.zeros(3)))]\n",
@@ -342,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -356,14 +379,14 @@
       " [ 0.  0.  1.  0.]]\n",
       "\n",
       "P1 *********************************************\n",
-      "[[  1.00e+00  -5.49e-16   6.50e-16  -1.00e+00]\n",
-      " [  1.40e-16   1.00e+00  -2.22e-16  -1.51e-16]\n",
-      " [  1.32e-16   2.78e-16   1.00e+00  -1.31e-16]]\n",
+      "[[  1.00e+00  -6.52e-17   1.40e-16  -1.00e+00]\n",
+      " [ -2.83e-17   1.00e+00   3.94e-15  -1.38e-16]\n",
+      " [ -3.69e-17  -4.22e-15   1.00e+00   3.62e-17]]\n",
       "\n",
       "P2 *********************************************\n",
-      "[[  1.00e+00  -1.17e-16   5.92e-17  -1.00e+00]\n",
-      " [  5.11e-17   1.00e+00   7.77e-16  -9.55e-17]\n",
-      " [ -1.15e-16  -9.44e-16   1.00e+00   1.12e-16]]\n",
+      "[[  1.00e+00  -1.86e-16   4.19e-16  -1.00e+00]\n",
+      " [ -4.63e-17   1.00e+00   1.83e-15   3.01e-17]\n",
+      " [ -2.20e-16  -2.00e-15   1.00e+00   2.20e-16]]\n",
       "\n"
      ]
     }
@@ -379,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -393,14 +416,14 @@
       " [ 0.  0.  1.  0.]]\n",
       "\n",
       "P1 *********************************************\n",
-      "[[ -1.88e-01  -9.56e-01  -2.27e-01   1.85e+02]\n",
-      " [ -6.17e-01   2.95e-01  -7.29e-01   3.47e+02]\n",
-      " [  7.64e-01   3.43e-03  -6.45e-01   2.25e+02]]\n",
+      "[[ -5.99e-02  -3.47e-01   9.36e-01  -3.50e+02]\n",
+      " [ -3.53e-01   8.84e-01   3.06e-01  -1.02e+02]\n",
+      " [ -9.34e-01  -3.12e-01  -1.75e-01   1.93e+02]]\n",
       "\n",
       "P2 *********************************************\n",
-      "[[  7.19e-01   6.39e-02   6.92e-01  -3.66e+02]\n",
-      " [ -1.43e-01   9.88e-01   5.73e-02  -2.70e+01]\n",
-      " [ -6.80e-01  -1.40e-01   7.19e-01  -2.62e+02]]\n",
+      "[[ -1.49e-01  -1.73e-01   9.74e-01  -4.05e+02]\n",
+      " [ -3.09e-01   9.44e-01   1.21e-01  -2.02e+01]\n",
+      " [ -9.39e-01  -2.82e-01  -1.94e-01   2.02e+02]]\n",
       "\n"
      ]
     }
@@ -415,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -451,19 +474,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "P_za_prikaz = P_reconstructed_PnP\n",
-    "P_za_prikaz = P_reconstructed"
+    "#P_za_prikaz = P_reconstructed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -475,8 +498,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
@@ -514,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -525,16 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x21efe707d68>"
+       "<matplotlib.legend.Legend at 0x1d65c6da550>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,6 +568,7 @@
     "plt.figure()\n",
     "for i in range(N_cams):\n",
     "    plt.scatter(xyz_r[i][:, 0], xyz[i][:,1], c='C{:d}'.format(i), label='{:d}'.format(i))\n",
+    "    plt.scatter(xyz[i][:, 0], xyz[i][:,1], c='C{:d}'.format(i), label='{:d}'.format(i+3), marker='x')\n",
     "plt.legend(loc=(1.01, 0))"
    ]
   },
@@ -556,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#test_cloud = pickle.load(open('results\\scene_dinoRing_cameradirtest_28-08-15-40.pkl', 'rb'))\n",
