--- a/test_pose_estimation.ipynb
+++ b/test_pose_estimation.ipynb
@@ -32,15 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 239,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "N_cams = 3\n",
+    "N_cams = 5\n",
     "r = 500\n",
-    "max_angle = np.pi/3\n",
+    "max_angle = np.pi/4\n",
     "axis = np.array([0, 1, 0], dtype=float)\n",
     "angles = -np.linspace(0, max_angle, N_cams)\n",
     "Cs = np.column_stack((np.cos(-angles-np.pi/2), np.zeros(N_cams), 1+np.sin(-angles-np.pi/2))) * r"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 240,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 241,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 242,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 243,
    "metadata": {
     "collapsed": true
    },
@@ -114,16 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 259,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "N_points = 25\n",
+    "N_points = 10\n",
+    "rand_amp = r / 10\n",
     "r_t = r//4\n",
-    "phi = np.linspace(np.pi/4, 3*np.pi/4, int(N_points**(1/2)))\n",
-    "theta = np.linspace(-2*np.pi/4, np.pi/4, int(N_points**(1/2)))\n",
+    "\n",
+    "phi = np.linspace(np.pi/3, 2*np.pi/3, int(N_points**(1/2)))\n",
+    "theta = np.linspace(np.pi/4, 5*np.pi/4, int(N_points**(1/2)))\n",
     "\n",
     "kx, ky = np.meshgrid(theta, phi)\n",
     "XX = r_t * np.cos(kx) * np.sin(ky)\n",
@@ -133,18 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 260,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "XX = XX + np.random.randn(*XX.shape)\n",
-    "YY = YY + np.random.randn(*YY.shape)\n",
-    "ZZ = ZZ + np.random.randn(*ZZ.shape)"
+    "XX = XX + np.random.randn(*XX.shape) * rand_amp\n",
+    "YY = YY + np.random.randn(*YY.shape) * rand_amp\n",
+    "ZZ = ZZ + np.random.randn(*ZZ.shape) * rand_amp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 261,
    "metadata": {
     "collapsed": true
    },
@@ -156,7 +158,7 @@
     "ax.quiver(Xs, Ys, Zs, Xd, Yd, Zd, color='C3', length=35, normalize=True, pivot='middle')\n",
     "ax.scatter(Xs, Ys, Zs, c=c_colors, antialiased=False, depthshade=False, edgecolor='k', linewidth=0.01, s=50)\n",
     "\n",
-    "ax.scatter(XX, YY, ZZ, c='k', marker='.')\n",
+    "ax.scatter(XX, YY, ZZ, c='k', marker='.', depthshade=False)\n",
     "\n",
     "ax.set_xlabel('x')\n",
     "ax.set_ylabel('y')\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 262,
    "metadata": {
     "collapsed": true
    },
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 263,
    "metadata": {
     "collapsed": true
    },
@@ -205,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d6572a5b70>"
+       "<matplotlib.legend.Legend at 0x1af00779b70>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +230,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncams = 3\n",
+    "npoints = 10\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "for i in range(ncams):\n",
+    "    cam = i + 2\n",
+    "    ax_p = fig.add_subplot(1, 2, 1)\n",
+    "    ax_p.scatter(xyz[cam][:npoints, 0], xyz[i][:npoints, 1], c='C{:d}'.format(i), label='cam {:d}'.format(cam))\n",
+    "ax_p.legend()\n",
+    "    \n",
+    "ax_3d = fig.add_subplot(1, 2, 2, projection='3d')\n",
+    "ax_3d.scatter(XX[:npoints], YY[:npoints], ZZ[:npoints], c='k', marker='.', depthshade=False)\n",
+    "ax_3d.set_xlabel('x')\n",
+    "ax_3d.set_ylabel('y')\n",
+    "ax_3d.set_zlabel('z')\n",
+    "ax_3d.view_init(90, 270)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +272,7 @@
     "    if P1 is None:\n",
     "        P1 = np.column_stack((np.eye(3), np.zeros(3)))\n",
     "    \n",
-    "    F, mask = cv2.findFundamentalMat(p1, p2, cv2.FM_RANSAC, d_max, alpha)\n",
+    "    F, mask = cv2.findFundamentalMat(p1, p2, cv2.FM_8POINT, d_max, alpha)\n",
     "    \n",
     "    # essential matrix (H&Z, p. 257)\n",
     "    E = K.T.dot(F).dot(K)\n",
@@ -282,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 266,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 267,
    "metadata": {
     "collapsed": true
    },
@@ -328,10 +357,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 268,
+   "metadata": {},
    "outputs": [],
    "source": [
     "P_reconstructed = [np.column_stack((np.eye(3), np.zeros(3)))]\n",
@@ -350,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 269,
    "metadata": {
     "collapsed": true
    },
@@ -364,14 +391,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prikaz"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 275,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "izpis = True\n",
+    "P_za_prikaz = P_reconstructed_PnP\n",
+    "#P_za_prikaz = P_reconstructed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "RECONSTRUCTED\n",
       "P0 *********************************************\n",
       "[[ 1.  0.  0.  0.]\n",
@@ -379,72 +427,27 @@
       " [ 0.  0.  1.  0.]]\n",
       "\n",
       "P1 *********************************************\n",
-      "[[  1.00e+00  -6.52e-17   1.40e-16  -1.00e+00]\n",
-      " [ -2.83e-17   1.00e+00   3.94e-15  -1.38e-16]\n",
-      " [ -3.69e-17  -4.22e-15   1.00e+00   3.62e-17]]\n",
+      "[[  6.33e-01   4.68e-02   7.72e-01  -3.48e+02]\n",
+      " [  5.57e-01   6.65e-01  -4.97e-01   3.94e+02]\n",
+      " [ -5.37e-01   7.46e-01   3.95e-01  -1.91e+02]]\n",
       "\n",
       "P2 *********************************************\n",
-      "[[  1.00e+00  -1.86e-16   4.19e-16  -1.00e+00]\n",
-      " [ -4.63e-17   1.00e+00   1.83e-15   3.01e-17]\n",
-      " [ -2.20e-16  -2.00e-15   1.00e+00   2.20e-16]]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "np.set_printoptions(precision=2)\n",
-    "print('RECONSTRUCTED')\n",
-    "for i, _ in enumerate(P_reconstructed):\n",
-    "    print('P{:d} '.format(i) + '*' * 45)\n",
-    "    print(_)\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RECONSTRUCTED (PnP)\n",
-      "P0 *********************************************\n",
-      "[[ 1.  0.  0.  0.]\n",
-      " [ 0.  1.  0.  0.]\n",
-      " [ 0.  0.  1.  0.]]\n",
+      "[[  7.10e-01   1.24e-01   6.94e-01  -3.13e+02]\n",
+      " [  4.28e-01   7.07e-01  -5.64e-01   3.87e+02]\n",
+      " [ -5.60e-01   6.97e-01   4.49e-01  -2.22e+02]]\n",
       "\n",
-      "P1 *********************************************\n",
-      "[[ -5.99e-02  -3.47e-01   9.36e-01  -3.50e+02]\n",
-      " [ -3.53e-01   8.84e-01   3.06e-01  -1.02e+02]\n",
-      " [ -9.34e-01  -3.12e-01  -1.75e-01   1.93e+02]]\n",
+      "P3 *********************************************\n",
+      "[[  7.40e-01   1.69e-01   6.51e-01  -2.84e+02]\n",
+      " [  3.68e-01   7.09e-01  -6.02e-01   4.06e+02]\n",
+      " [ -5.63e-01   6.85e-01   4.62e-01  -2.30e+02]]\n",
       "\n",
-      "P2 *********************************************\n",
-      "[[ -1.49e-01  -1.73e-01   9.74e-01  -4.05e+02]\n",
-      " [ -3.09e-01   9.44e-01   1.21e-01  -2.02e+01]\n",
-      " [ -9.39e-01  -2.82e-01  -1.94e-01   2.02e+02]]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('RECONSTRUCTED (PnP)')\n",
-    "for i, _ in enumerate(P_reconstructed_PnP):\n",
-    "    print('P{:d} '.format(i) + '*' * 45)\n",
-    "    print(_)\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "P4 *********************************************\n",
+      "[[  7.54e-01   1.96e-01   6.27e-01  -2.66e+02]\n",
+      " [  3.32e-01   7.10e-01  -6.21e-01   4.18e+02]\n",
+      " [ -5.67e-01   6.76e-01   4.71e-01  -2.35e+02]]\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "\n",
       "ACTUAL\n",
       "P0 *********************************************\n",
       "[[  1.00e+00   0.00e+00   0.00e+00  -3.06e-14]\n",
@@ -452,41 +455,47 @@
       " [  0.00e+00   0.00e+00   1.00e+00  -0.00e+00]]\n",
       "\n",
       "P1 *********************************************\n",
-      "[[   0.87    0.      0.5  -250.  ]\n",
-      " [   0.      1.      0.     -0.  ]\n",
-      " [  -0.5     0.      0.87   66.99]]\n",
+      "[[  0.98   0.     0.2  -97.55]\n",
+      " [  0.     1.     0.    -0.  ]\n",
+      " [ -0.2    0.     0.98   9.61]]\n",
       "\n",
       "P2 *********************************************\n",
-      "[[   0.5     0.      0.87 -433.01]\n",
+      "[[   0.92    0.      0.38 -191.34]\n",
       " [   0.      1.      0.     -0.  ]\n",
-      " [  -0.87    0.      0.5   250.  ]]\n",
+      " [  -0.38    0.      0.92   38.06]]\n",
+      "\n",
+      "P3 *********************************************\n",
+      "[[   0.83    0.      0.56 -277.79]\n",
+      " [   0.      1.      0.     -0.  ]\n",
+      " [  -0.56    0.      0.83   84.27]]\n",
+      "\n",
+      "P4 *********************************************\n",
+      "[[   0.71    0.      0.71 -353.55]\n",
+      " [   0.      1.      0.     -0.  ]\n",
+      " [  -0.71    0.      0.71  146.45]]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print('ACTUAL')\n",
-    "for i, _ in enumerate(Ps):\n",
-    "    print('P{:d} '.format(i) + '*' * 45)\n",
-    "    print(_)\n",
-    "    print()"
+    "if izpis:\n",
+    "    np.set_printoptions(precision=2)\n",
+    "    print('\\nRECONSTRUCTED')\n",
+    "    for i, _ in enumerate(P_za_prikaz):\n",
+    "        print('P{:d} '.format(i) + '*' * 45)\n",
+    "        print(_)\n",
+    "        print()\n",
+    "    print('-' * 50)\n",
+    "    print('\\nACTUAL')\n",
+    "    for i, _ in enumerate(Ps):\n",
+    "        print('P{:d} '.format(i) + '*' * 45)\n",
+    "        print(_)\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "P_za_prikaz = P_reconstructed_PnP\n",
-    "#P_za_prikaz = P_reconstructed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 277,
    "metadata": {
     "collapsed": true
    },
@@ -498,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 279,
    "metadata": {
     "collapsed": true
    },
@@ -507,7 +516,7 @@
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "\n",
-    "ax.quiver(Xs_r, Ys_r, Zs_r, Xd_r, Yd_r, Zd_r, color='C3', length=10, normalize=True, pivot='middle')\n",
+    "ax.quiver(Xs_r, Ys_r, Zs_r, Xd_r, Yd_r, Zd_r, color='C3', length=50, normalize=True, pivot='middle')\n",
     "ax.scatter(Xs_r, Ys_r, Zs_r, c=c_colors, antialiased=False, depthshade=False, edgecolor='k', linewidth=0.01, s=50)\n",
     "ax.scatter(XX, YY, ZZ, c='k', marker='.')\n",
     "\n",
@@ -539,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 216,
    "metadata": {
     "collapsed": true
    },
@@ -550,16 +559,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d65c6da550>"
+       "<matplotlib.legend.Legend at 0x1af79c29fd0>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
