debugging camera pose estimation

--- a/obdelava_SfM.ipynb
+++ b/obdelava_SfM.ipynb
@@ -515,7 +515,7 @@
     "    else:\n",
     "        im1 = im2\n",
     "        im2 = tools.read_bw(images[i+1])\n",
-    "        Rt1, Rt2, p1, p2 = tools.get_camera_matrices(im1, im2, K, last_Rt,# cloud, i, distCoeffs, \n",
+    "        Rt1, Rt2, p1, p2 = tools.get_camera_matrices_pnp(im1, im2, K, last_Rt, cloud, i, distCoeffs, \n",
     "                                            d_max=d_max, alpha=alpha, scale=SCALE, match_ratio=MATCH_RATIO, mode=MODE)\n",
     "\n",
     "    last_Rt = Rt2\n",
@@ -524,7 +524,7 @@
     "    \n",
     "    points3D = []\n",
     "    for x1, x2 in zip(p1, p2):\n",
-    "        X = tools.triangulate_lsq(tools.to_homogenous(x1), tools.to_homogenous(x2), P1, P2)\n",
+    "        X = tools.triangulate_lm(tools.to_homogenous(x1), tools.to_homogenous(x2), P1, P2)\n",
     "        points3D.append(tools.Point3D(X, x1, x2, i, i+1))\n",
     "    \n",
     "    if i == 0:\n",
