new results, minor fixes

--- a/obdelava_SfM.ipynb
+++ b/obdelava_SfM.ipynb
@@ -40,9 +40,9 @@
    },
    "outputs": [],
    "source": [
-    "SCALE = 0.2\n",
+    "SCALE = 0.5\n",
     "MATCH_RATIO = 0.8  # more -> LESS matches rejected\n",
-    "NFEV = 20000         # maximum number of least_squares iterations\n",
+    "NFEV = 5000         # maximum number of least_squares iterations\n",
     "MODE = 'ORB'        # feature extraction algorithm"
    ]
   },
@@ -55,7 +55,8 @@
    "outputs": [],
    "source": [
     "d_max = 1       # (for RANSAC) maximum distance from epipolar line above which a point is considered an outlier\n",
-    "alpha = 0.995   # (RANSAC) desired probability, that the estimated F matrix is correct"
+    "alpha = 0.995   # (RANSAC) desired probability, that the estimated F matrix is correct\n",
+    "max_outlier_sd = 2"
    ]
   },
   {
@@ -175,15 +176,15 @@
     "    \n",
     "    if i == 0:\n",
     "        cloud = tools.Scene([Rt1, Rt2], points3D, K, im1.shape, debug=True)\n",
-    "        #cloud.bundle_adjustment(ftol=1e-8, max_nfev=NFEV, max_sd_dist=2, X_only=True)\n",
+    "        cloud.bundle_adjustment(ftol=1e-6, max_nfev=NFEV, max_sd_dist=max_outlier_sd, X_only=True)\n",
     "    else:\n",
     "        pair = tools.Scene([Rt1, Rt2], points3D, K, im1.shape, frame_offset=i, debug=True)\n",
-    "        #pair.bundle_adjustment(ftol=1e-8, max_nfev=NFEV, max_sd_dist=2, X_only=False)\n",
+    "        pair.bundle_adjustment(ftol=1e-6, max_nfev=NFEV, max_sd_dist=max_outlier_sd, X_only=True)\n",
     "        cloud.add_next_pair(pair)\n",
     "        \n",
     "#         # Sequential bundle adjustment\n",
-    "#         print('\\n--- seqential BA, image pair {:d} ---'.format(i))\n",
-    "#         cloud.bundle_adjustment(ftol=1e-6, max_nfev=NFEV, max_sd_dist=2, X_only=False)\n",
+    "        print('\\n--- seqential BA, image pair {:d} ---'.format(i))\n",
+    "        cloud.bundle_adjustment(ftol=1e-6, max_nfev=NFEV, max_sd_dist=max_outlier_sd, X_only=True)\n",
     "        \n",
     "    if plot:# and i % (N//2) == 0:\n",
     "        print('---- slika {:d} ----\\n'.format((i+1)))\n",
@@ -1060,8 +1061,7 @@
     }
    ],
    "source": [
-    "#cloud.bundle_adjustment(ftol=1e-5, max_nfev=5000)\n",
-    "X, Y, Z = cloud.render(cameras=True, openGL=True)"
+    "cloud.bundle_adjustment(ftol=1e-3, max_nfev=5000, X_only=True)"
    ]
   },
   {
@@ -1113,8 +1113,8 @@
    "outputs": [],
    "source": [
     "name = path.replace('/', '_').replace('\\\\', 'n')\n",
-    "name += '_sequential_final_BA'\n",
-    "#cloud.pickle_save(name=name, path='results', mode='scene')"
+    "name += '_sequential_final_BA_X_only'\n",
+    "cloud.pickle_save(name=name, path='results', mode='scene')"
    ]
   },
   {
@@ -1125,7 +1125,7 @@
    },
    "outputs": [],
    "source": [
-    "#cloud.render(openGL=True, cameras=True)"
+    "cloud.render(openGL=True, cameras=True)"
    ]
   }
  ],
@@ -1145,7 +1145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
